adapt to new db api